# prompt-injection-detector

./: .env.example  .gitignore  .pre-commit-config.yaml  DATA.md  MODELING.md  README.md  SCORING.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml
app/core/: config.py
app/dashboard/: dashboard.py  data.py
app/data/: build.py  clean.py  collect.py  schema.py  sources.py  split.py
app/decision/: engine.py
app/detection/: base.py  engine.py  taxonomy.py
app/detection/heuristics/: rules.py
app/detection/ml/: classifier.py  dataset.py  embedder.py  evaluate.py  train.py
app/logging/: setup.py
app/proxy/: llm.py  main.py
app/scoring/: engine.py
app/storage/: db.py  models.py  recorder.py  repository.py
tests/: test_dashboard_data.py  test_data_pipeline.py  test_decision.py  test_detection_engine.py  test_heuristics.py  test_ml_pipeline.py  test_proxy.py  test_scoring.py  test_storage.py  test_taxonomy_schema.py
